<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/userphoto"
            android:background="@drawable/circle_bg"
            android:id="@+id/userphoto"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logn_text"
            android:background="@drawable/reg_edittext_style"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/reg_edittext_style"
            />


        <Button
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/reg_btn_style"
            android:layout_marginBottom="10dp"
            android:id="@+id/btn_logn"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:text="@string/newt"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/reg"
                android:layout_gravity="right"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/go_reg"
                />
        </LinearLayout>

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:id="@+id/progress_login"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>