<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Verify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="text"
            android:background="@drawable/reg_edittext_style"
            android:layout_marginBottom="30dp"
            android:hint="@string/name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/verifier"
            android:hint="@string/verif"
            android:background="@drawable/reg_edittext_style"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:id="@+id/btn_v"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/ver"
            android:background="@drawable/reg_btn_style"
            />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>