<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Glycemie">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="7dp"
    >
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/glycemie"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prelever"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/gly"
        android:background="@drawable/reg_edittext_style"
        android:id="@+id/edit_glycemie"
        android:layout_marginBottom="60dp"
        android:inputType="numberDecimal"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/reg_btn_style"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:id="@+id/btn_gly"
        />
</LinearLayout>

</android.support.v4.widget.NestedScrollView>